support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_extra_unsigned.i
%module xxx

int foo(unsigned unsigned int x);
int bar(signed signed y);
int spam(unsigned signed int x);

